# openai-compatible-context-engine

./: .gitignore  LICENSE  README.md  minimal_test.py  pyproject.toml
.github/workflows/: ci.yml
examples/: compare_compression_modes.py  compare_deduplication_modes.py  compare_with_without_engine.py  openai_compatible.py  openai_llm_compression.py
src/openai_context_engine/: __init__.py  builder.py  compressors.py  deduplication.py  exceptions.py  models.py  reducers.py  tokenizers.py
tests/: test_builder.py  test_compression.py  test_compression_modes_example.py  test_deduplication_modes_example.py
